--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: bookmark, data: {confirm: 'Do you want to save the book?'}, remote: true)) do |form| %>
+<%= form_with(model: bookmark, local: false) do |form| %>
   <% if bookmark.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(bookmark.errors.count, "error") %> prohibited this bookmark from being saved:</h2>
@@ -21,17 +21,18 @@
     <%= form.text_field :url %>
   </div>
 
-  <div class="field">
+
+ <!-- <div class="field">
     <%= form.label :category_id %>
     <%= form.text_field :category_id %>
-  </div>
+  </div> -->
 
-  <div class="field">
+  <!-- <div class="field">
     <%= form.label :kind_id %>
     <%= form.text_field :kind_id %>
-  </div>
+  </div> -->
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit data: {confirm: 'Do you want to create this bookmark?' } %>
   </div>
 <% end %>
