--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Bookmarks</h1>
+      
+  <%= render "form", bookmark: @bookmark %>
 
 <table>
   <thead>
@@ -15,15 +17,7 @@
 
   <tbody>
     <% @bookmarks.each do |bookmark| %>
-      <tr>
-        <td><%= bookmark.title %></td>
-        <td><%= bookmark.url %></td>
-        <td><%= bookmark.category_id %></td>
-        <td><%= bookmark.kind_id %></td>
-        <td><%= link_to 'Show', bookmark %></td>
-        <td><%= link_to 'Edit', edit_bookmark_path(bookmark) %></td>
-        <td><%= link_to 'Destroy', bookmark, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <%= render "bookmark", bookmark: bookmark %>
     <% end %>
   </tbody>
 </table>
@@ -31,3 +25,5 @@
 <br>
 
 <%= link_to 'New Bookmark', new_bookmark_path %>
+
+<div id="bookmark-content"></div>
