--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   </head>
 
-  <body>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-warning">
+   <strong><%= link_to 'Inicio', root_path, class: 'navbar-brand' %></strong>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+       <strong><%= link_to 'Marcadores', bookmarks_path, class: 'nav-link' %></strong>
+       <strong><%= link_to 'Kinds', kinds_path, class: 'nav-link' %></strong>
+       <strong><%= link_to 'Catagories', categories_path, class: 'nav-link' %></strong>
+    </div>
+  </div>
+</nav>
+
   <div class='container'>
     <%= yield %>
   </div> 
