--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -22,15 +22,15 @@
   </div>
 
 
- <!-- <div class="field">
+ <div class="field">
     <%= form.label :category_id %>
     <%= form.text_field :category_id %>
-  </div> -->
+  </div> 
 
-  <!-- <div class="field">
+  <div class="field">
     <%= form.label :kind_id %>
     <%= form.text_field :kind_id %>
-  </div> -->
+  </div>
 
   <div class="actions">
     <%= form.submit data: {confirm: 'Do you want to create this bookmark?' } %>
