--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -4,13 +4,13 @@
       
   <%= render "form", bookmark: @bookmark %>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class="thead-dark">
     <tr>
-      <th>Title</th>
-      <th>Url</th>
-      <th>Category</th>
-      <th>Kind</th>
+      <th scope="col">Title</th>
+      <th scope="col">Url</th>
+      <th scope="col">Category</th>
+      <th scope="col">Kind</th>
       <th colspan="3"></th>
     </tr>
   </thead>
