--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Categories</h1>
-
-<table>
-  <thead>
+<h2 class="text-center">Categories</h2>
+<br>
+<table class="table">
+  <thead class="thead-dark" >
     <tr>
-      <th>Name</th>
-      <th>Is public</th>
-      <th>Category</th>
+      <th scope="col">Name</th>
+      <th scope="col">Is public</th>
+      <th scope="col">Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
