Petition AJAX ready

--- a/app/views/kinds/index.html.erb
+++ b/app/views/kinds/index.html.erb
@@ -1,11 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Kinds</h1>
+<h2 class="text-center">Kinds</h2>
+<br>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class="thead-dark">
     <tr>
-      <th>Name</th>
+      <th scope="col">Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
