--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <div class="navbar-nav">
        <strong><%= link_to 'Marcadores', bookmarks_path, class: 'nav-link' %></strong>
        <strong><%= link_to 'Kinds', kinds_path, class: 'nav-link' %></strong>
-       <strong><%= link_to 'Catagories', categories_path, class: 'nav-link' %></strong>
+       <strong><%= link_to 'Categories', categories_path, class: 'nav-link' %></strong>
     </div>
   </div>
 </nav>
