--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,22 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Title:</strong>
+  <strong>Título:</strong>
   <%= @bookmark.title %>
 </p>
 
 <p>
-  <strong>Url:</strong>
+  <strong>URL:</strong>
   <%= @bookmark.url %>
 </p>
 
 <p>
-  <strong>Category:</strong>
+  <strong>Categoría:</strong>
   <%= @bookmark.category_id %>
 </p>
 
 <p>
-  <strong>Kind:</strong>
+  <strong>Tipo:</strong>
   <%= @bookmark.kind_id %>
 </p>
 
