--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Category</h1>
-
+<h2 class="text-center">Editar Categoría</h2>
+<br>
 <%= render 'form', category: @category %>
 
 <%= link_to 'Show', @category %> |
