--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h2 class="text-center">Categories</h2>
+<h2 class="text-center">Categorías</h2>
 <br>
 <table class="table">
   <thead class="thead-dark" >
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Is public</th>
-      <th scope="col">Category</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Público</th>
+      <th scope="col">Categoría</th>
       <th colspan="3"></th>
     </tr>
   </thead>
