--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,16 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Bookmarks</h1>
-      
+<h2 class="text-center">Marcadores</h2>
+<br>
   <%= render "form", bookmark: @bookmark %>
 
 <table class="table">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Title</th>
-      <th scope="col">Url</th>
-      <th scope="col">Category</th>
-      <th scope="col">Kind</th>
+      <th scope="col">Título</th>
+      <th scope="col">URL</th>
+      <th scope="col">Categoría</th>
+      <th scope="col">Tipo</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +24,6 @@
 
 <br>
 
-<%= link_to 'New Bookmark', new_bookmark_path %>
+<button type="button" class="btn btn-warning text-dark"><%= link_to 'Nuevo Marcador', new_bookmark_path %></button>
 
 <div id="bookmark-content"></div>
