--- a/app/views/kinds/index.html.erb
+++ b/app/views/kinds/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h2 class="text-center">Kinds</h2>
+<h2 class="text-center">Tipos de Marcadores</h2>
 <br>
 
 <table class="table">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Name</th>
+      <th scope="col">Nombre</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Kind', new_kind_path %>
+<button type="button" class="btn btn-warning text-dark" ><%= link_to 'Nuevo Tipo', new_kind_path %></button>
