--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,8 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
        <strong><%= link_to 'Marcadores', bookmarks_path, class: 'nav-link' %></strong>
-       <strong><%= link_to 'Kinds', kinds_path, class: 'nav-link' %></strong>
-       <strong><%= link_to 'Categories', categories_path, class: 'nav-link' %></strong>
+       <strong><%= link_to 'Tipos', kinds_path, class: 'nav-link' %></strong>
+       <strong><%= link_to 'Categorías', categories_path, class: 'nav-link' %></strong>
     </div>
   </div>
 </nav>
