--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -38,7 +38,7 @@
 
 <br>
   <div class="actions">
-    <%= form.submit data: {confirm: 'Do you want to create this bookmark?' } %>
+    <%= form.submit data: {confirm: 'Are you sure to create this bookmark?' } %>
   </div>
 <% end %>
 <br>
