--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
+<button  type="button" class="btn btn-warning"><%= link_to 'New Category', new_category_path %></button>
